--- a/.github/workflows/ocp-action.yml
+++ b/.github/workflows/ocp-action.yml
@@ -38,11 +38,11 @@ jobs:
       - run: "pip install -r requirements.txt"
 
       # Run the action
-      - uses: Yeicor/ocp-action@v3.1.1
+      - uses: Yeicor/ocp-action@v3.1.3
         with:
           scripts: "examples/birdhouse.py|examples/OCC_bottle.py|examples/TTT/ttt-t-05-19b_WEDGE_b123d.py|examples/TTT/ttt-t2-20-y3_FLANGE_b123d.py"
           formats: "STL|STEP|GLTF"
           tolerance: "0.001"
-          angular-tolerance: "0.1"
+          angular_tolerance: "0.1"
           website: "."
           website-screenshot: "true"
